feat: add library component picker

--- a/src/library-authoring/index.scss
+++ b/src/library-authoring/index.scss
@@ -2,6 +2,7 @@
 @import "./components/ComponentCard";
 @import "./generic";
 @import "./LibraryAuthoringPage";
+@import "./component-picker";
 
 .library-cards-grid {
   display: grid;
